# MinimalLogging

./: .gitignore  CMakeLists.txt  README.md  main.cpp
output/: metadata.txt
src/: io_handler.h  logger.h  utils.h
src/log_reader/: log_reader.h
src/logger/: io_handler.h  logger.h
src/meta_data/: io_handler.h  meta_data.h  meta_data_node.h  span.h  type_descriptors.h  types.h
src/utils/: span.h  utils.h
